--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,54 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font: 14px "Century Gothic", Futura, sans-serif;
+  margin:20px;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+li {
+  list-style: none;
+  margin: 10px;
+}
+li button{
+  font-size: 15px;
+  background-color: white;
+  border: 1px black solid; 
+}
+li button:focus{
+  outline: none;
+}
+li button:hover {
+  background-color:rgba(32, 173, 108, 0.541);
+}
+.status 
+{
+  margin-bottom: 10px;
+}
+.square 
+{
+  background: #fff;
+  border:1px solid #999;
+  float: left;
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 34px;
+  height: 34px;
+  margin-right: -1px;
+  margin-top:-1px;
+  padding:0;
+  text-align: center;
+  width: 34px;
+}
+.square:focus
+{
+  outline: none;
+}
+.square:focus 
+{
+  background: #ddd;
+}
+.game{
+  display: flex;
+  flex-direction: row;
+}
+.game-info
+{
+  margin-left: 20px;
 }
